# kdiff3-demo

./: CMakeLists.txt
kdiff3-demo/: CMakeLists.txt  kdiff3-demo.cpp  kdiff3-demo.h
